--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-{@import "{{ site.theme }}";
+@import "{{ site.theme }}";
 
 .page-header{
 	background-color: #f2f2f2;
@@ -35,5 +35,4 @@ p, td {
 
 .project-tagline{
 	color: #666666;
-}
 }
